fix mentor
